# charmonium.time_block

./: .bumpversion.cfg  .pylintrc  LICENSE.txt  README.rst  TODO.md  flake.nix  pyproject.toml  pytest.ini
.github/workflows/: main.yaml
charmonium/time_block/: __init__.py  _cli.py  _lib.py  time_block.py  utils.py
docs/: conf.py  contributing.rst  installation.rst
scripts/: docs.sh  publish.sh  test.sh
stubs/psutil/: __init__.pyi
tests/: test_example.py
