[tool.poetry]
name = "charmonium.time_block"
version = "0.3.2"
description = "Time a block of code."
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/charmoniumQ/charmonium.time_block.git"
packages = [
    { include = "charmonium" },
]

[tool.poetry.scripts]
time_block = "charmonium.time_block._cli:main"

[tool.poetry.dependencies]
python = "^3.7"
psutil = "^5.7.0"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"
autoflake = "^1.3.1"
isort = "^4.3.21"
black = "^19.10b0"
pylint-exit = "^1.1.0"
mypy = "^0.780"
pytest = "^5.4.1"
pytest-cov = "^2.10.0"
coverage = "^5.1"
codecov = "^2.1.4"
sphinx = "^3.1.0"
sphinx-autoapi = "^1.4.0"
sphinx-autodoc-annotation = "^1.0-1"
bump2version = "^1.0.0"
tox = "^3.15.2"
pylint = "^2.6.0"
wrapt = "^1.12.1"

[tool.tox]
# According to tox docs
# The tox configuration can also be in pyproject.toml (if you want to avoid an extra file).
# Currently only the old format is supported via legacy_tox_ini, a native implementation is planned though.
legacy_tox_ini = """
[tox]
envlist = py37,py38
# See tool.poetry.dependencies.python
isolated_build = True

[testenv]
deps = poetry
setenv = MYPYPATH=stubs
commands =
  poetry install
  mypy --namespace-packages -p charmonium.time_block
  pytest --quiet --exitfirst
"""

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
