[tool.poetry]
name = "charmonium.time_block"
version = "0.4.0"
description = "Time a block of code."
authors = ["Samuel Grayson <sam+dev@samgrayson.me>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/charmoniumQ/charmonium.time_block.git"
packages = [
    { include = "charmonium" },
]

[tool.poetry.scripts]
time_block = "charmonium.time_block._cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
mypy = "^1.17.1"
pytest = "^8.4.1"
tox = "^4.28.4"
autoflake = "^2.3.1"
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.8"
coverage = "^7.10.4"
pylint-exit = "^1.2.0"
types-psutil = "^7.0.0.20250801"
pytest-asyncio = "^1.1.0"
twine = "^6.1.0"

[tool.tox]
# According to tox docs
# The tox configuration can also be in pyproject.toml (if you want to avoid an extra file).
# Currently only the old format is supported via legacy_tox_ini, a native implementation is planned though.
legacy_tox_ini = """
[tox]
envlist = py39,py310,py311,py312
# See tool.poetry.dependencies.python
isolated_build = True

[testenv]
deps = poetry
setenv = MYPYPATH=stubs
commands =
  poetry install
  mypy --namespace-packages -p charmonium.time_block
  pytest --quiet --exitfirst
"""

[tool.pytest.ini_options]
addopts = "--doctest-glob='*.rst'"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
